# finhub

./: .dockerignore  .gitignore  AGENTS.md  BUDGET_API_TESTING.md  Dockerfile  ENVIRONMENT_SETUP.md  MVP_API_TESTING.md  MVP_DEVELOPMENT_PLAN.md  PRODUCTION_CHECKLIST.md  PRODUCTION_DOCKER_GUIDE.md  PROJECT_SETUP_GUIDE.md  README.md  Summary.md  TECHNICAL_ARCHITECTURE.md  check_limits.py  docker-compose.yml  manage.py  pyproject.toml  test_budget_editing.py
api/: __init__.py  urls.py
budgets/: admin.py  models.py  serializers.py  tests.py  views.py
budgets/migrations/: 0001_initial.py  0002_alter_budget_unique_together_and_more.py
categories/: admin.py  default_categories.py  models.py  serializers.py  tests.py  views.py
categories/migrations/: 0001_initial.py  0002_alter_category_unique_together_and_more.py  0003_defaultcategorytemplate.py  0004_seed_defaultcategorytemplate.py
core/: middleware.py  models.py
docs/: README.md
docs/agent/: README.md  architecture.md  conventions.md  git-workflow.md  project.md  roadmap.md  state.md  voice-assistant-v2.md  voice-input.md
docs/human/: README.md  deploy.md  environment.md  getting-started.md  overview.md
finhub/: asgi.py  settings_old_backup.py  urls.py  wsgi.py
finhub/settings/: __init__.py  base.py  development.py  production.py
goals/: admin.py  models.py
goals/migrations/: 0001_initial.py
telegram_bot/: admin.py  models.py  tests.py
telegram_bot/handlers/: base.py  budget_handler.py  callback_handler.py  command_handler.py  (+5 more)
transactions/: admin.py  models.py  serializers.py  tests.py  views.py
(+42 files in other folders)
